<resources>
    <string name="app_name">SultanPosts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_name">Name : %1$s</string>
    <string name="label_username">Username : %1$s</string>
    <string name="label_email">Email : %1$s</string>
    <string name="label_city">City : %1$s</string>
    <string name="label_zip">Zip-code : %1$s</string>
    <string name="label_company">Company : %1$s</string>
    <string name="umut">Umut Arpidinov</string>
    <string name="label_users">Users</string>
    <string name="lorem_ipsum">sunt aut facere repellat provident occaecati excepturi sdfsdfsdfs sdfsdf afdadf afdadf afdadsf adfa adfafda afdadf</string>
    <string name="lorem_full">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="authorization">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="register">Регистрация</string>
    <string name="name">Имя</string>
    <string name="lastname">Фамилия</string>
    <string name="main">Главная</string>
    <string name="tickets">Билеты</string>
    <string name="profile">Профиль</string>
    <string name="success">success</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="error_text_login">Логин или пароль неверный. Попробуйте еще раз</string>
    <string name="imagedescription">ImageDescription</string>
    <string name="book">Забронировать очередь</string>
    <string name="label_branches">Отделения</string>
    <string name="random_address">Г. Бишкек ул. Анкара, 178</string>
    <string name="status_closed">Закрыто</string>
    <string name="status_open">Открыто</string>
    <string name="service_random">Обслуживание физических лиц</string>
</resources>