<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/holo_blue_light"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    android:layout_marginVertical="2dp"
    app:cardElevation="2dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            style="@style/MainTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_name" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/MainTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_email" />
        <TextView
            android:id="@+id/tv_zip"
            style="@style/MainTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_zip" />

        <TextView
            android:id="@+id/tv_city"
            style="@style/MainTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_city" />

        <TextView
            android:id="@+id/tv_company_name"
            style="@style/MainTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_company" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>