<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constrain_layout"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="250dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/img_logo"
            app:layout_constraintBottom_toTopOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="logo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorization"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="start"
            android:paddingHorizontal="16dp"
            android:textColor="@color/red"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <LinearLayout
            android:id="@+id/ll_edit_texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="64dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <EditText
                android:id="@+id/et_login"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edit_text_active_bg"
                android:hint="@string/login"
                android:paddingHorizontal="12dp"
                android:textColor="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:ignore="Autofill" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/edit_text_active_bg"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/gray"
                    app:layout_constraintTop_toBottomOf="@id/tv_title"
                    tools:ignore="Autofill" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:text="войти"
            android:textAllCaps="false"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>